# strutopy

./: .gitignore  CLAUDE.md  README.md  beta.csv  corpus.mm.index  create_synthetic_corpora.py  debug_f.py  dictionary  evaluate.py  expectation_maximization.ipynb  fit_reference_model.py  functional_DI.ipynb  gamma_scheme.py  generate_docs.py  graph.ipynb  heldout.py  init.kappa.ipynb  init.model-Copy1.ipynb  init.model.ipynb  initSTM  label_topics.py  lda_comparison.py  main.py  makeTopMatrix.py  optimizeDocument.py  perplexity.py  pipeline.py  poliblogs_example.py  pyproject.toml  randomInit.ipynb  requirements.txt  run_simulations.py  script.sh  settings.py  simulate.py  simulate_ctm.py  simulate_lda.py  simulate_stm.py  spectral_initialisation.py  stm.py  (+7 more)
.ipynb_checkpoints/: expectation_maximization-checkpoint.ipynb  functional_DI-checkpoint.ipynb  graph-checkpoint.ipynb  init.kappa-checkpoint.ipynb  init.model-Copy1-checkpoint.ipynb  init.model-checkpoint.ipynb  optim_poisson-checkpoint.ipynb  stm_TextProcessor()-checkpoint.ipynb
application/: create_corpus.py  get_wiki_docs.py
archive/: LDA_init.py  content_model.py  debug_bfgs.py  debug_f.py  main.py  np.txt  old_stm.py  simulate_lda.py  simulations.py  stm_dgp.py
data/: corpus.mm.index  dictionary
notebooks/: LDAexample.ipynb  create_preprocess.ipynb  evaluate_reference_model.ipynb  graph.ipynb  init.kappa.ipynb  init.model.ipynb  optim_poisson.ipynb  run.model.ipynb  stm_TextProcessor().ipynb  visualise_distributions.ipynb  wiki_data.ipynb
src/: 01_get_wiki_docs.py  02_create_corpus.py  05_train.py  (+5 more)
(+115 files in other folders)
