[project]
name = "strutopy"
version = "0.1.0"
description = "Structural Topic Modeling in Python"
readme = "README.md"
authors = [
    { name = "Maximilian Kricke", email = "krickema@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "qpsolvers>=4.8.2",
    "scikit-learn>=1.8.0",
    "wikipedia>=1.4.0",
    "wordcloud>=1.9.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
